--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "heroku-postbuild" : "node_modules/.bin/encore production"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
