--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
-        "heroku-postbuild" : "node_modules/.bin/encore production"
+        "heroku-postbuild": "node_modules/.bin/encore production"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
         "css-loader": "^3.2.0",
         "jquery": "^3.4.1",
-        "popper.js": "^1.15.0"
+        "popper.js": "^1.15.0",
+        "webpack": "^4.40.2"
     }
 }
