--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/serializer": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.6",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "symfony/apache-pack": "1.0.*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.13",
