--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/apache-pack": "1.0.*",
         "doctrine/annotations": "^1.7",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
@@ -15,12 +16,12 @@
         "symfony/serializer": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.6",
-        "symfony/yaml": "4.3.*",
-        "symfony/apache-pack": "1.0.*"
+        "symfony/yaml": "4.3.*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.13",
-        "symfony/web-server-bundle": "4.3.*"
+        "symfony/web-server-bundle": "4.3.*",
+        "symfony/apache-pack": "1.0.*",
     },
     "config": {
         "preferred-install": {
